--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "next": "14.2.25",
-    "next-theme": "^0.1.5",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.0.2",
